public/styles.css
/* ... */
a:hover {
  font-weight: 800;
  color: var(--main-red);
}
h3 {
  font-family: Moderat Regular;
}
/* ---- NAV ------- */

nav {
  display: flex;
  width: 100vw;
  justify-content: space-between;
  position: fixed;
}
nav {
  padding: 2vh 6vw 0 5vw;
}
.cherri:hover, .about div:hover, .modal-link:hover {
  font-weight: 800;
  cursor: pointer;
  color: var(--main-red);
}
.about {
  display: flex;
  justify-content: flex-end;
  padding-right: 10vw;
}
.about div {
  padding-right: 5px;
}

.projects:hover {
  font-weight: 800;
  cursor: pointer;
  color: var(--main-red);
}
/* ---------FOOTER----------- */
.home-footer {
  position: fixed;
  bottom: 0;
  width: 100vw;
  display: flex;
  justify-content: space-between;
}
.social {
  padding: 0 6vw 5vh 5vw;
}
.score {
  text-align: center;
}
#points {
  font-size: 24px;
  padding-top: 10px;
}
#points-text {
  line-height: 0.5;
}
.projects {
  padding: 0 6vw 5vh 5vw;
}
.projects img {
  max-width: 18px;
  padding-left: 8px;
}
.designed {
  color: var(--main-brown);
  text-align: center;
}
.designed-container {
  display: flex;
  margin: 0 auto;
}
.designed a {
  color: inherit;  
}
.designed a:hover {
  color: var(--main-red);
}
.designed-right {
  margin-left: 5px;
}
.link-container {
  display: flex;
  margin-left: 6px;
}
.link-container-projects {
  display: flex;
}
.link-arrow {
  height: 8px;
  width: 8px;
  background-size: contain;
  background-repeat: no-repeat;
  margin-left: 4px;
  margin-top: 3px;
}
.link-arrow-white {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/external_link_white.png');
}
.link-arrow-black {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/external_link_black.png');
}
.link-arrow-brown {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/external_link_brown.png');
}
.link-arrow-container:hover .link-arrow {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/external_link_red.png');
}
/* ----------MODAL---------- */
.modal-wrapper {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: 9998;
  background: rgba(0, 0, 0, 0.3);
}
.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999;
  background: var(--main-background);
  border-radius: 20px;
}
.modal-title {
  text-align: center;
  padding: 20px 40px 0;
  font-size: 55px;
  font-family: 'Moderat Regular';
}
.modal-body {
  padding: 0 40px 30px;
  font-size: 20px;
  text-align: center;
  width: 34vw;
}
.modal-cherri {
  color: var(--main-red);
}
.close-modal-btn {
  float: right;
  cursor: pointer;
  padding: 25px 30px;
}
.close-modal-btn img {
  width: 25px;
}
.close-modal-btn:hover {
  cursor: pointer;
  color: var(--main-red);
}
.back-drop {
  background-color: rgba(48, 49, 48, 0.42);
  height: 100%;
  position: fixed;
  transition: all 1.3s;
  width: 100%;
}
/* ---- WORLD STYLES ---- */

.world-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: 'Moderat Regular';
  height: 90vh;
  width: 100vw;
  align-items: center;
}
#world {
  font-size: 3em;
}
#pac, #pacdies, .ghost, .world-char, .world-letter, .space, .cherry, .eaten {
  display: inline-block;
}
#pac img, .ghost img {
  height: 50px;
}
.ghost {
  width: 25px;
}
#pacdies img {
  height: 56px;
}
.cherry img {
  width: 40px;
}
.space {
  width: 10px;
}
.eaten {
  width: 25px;
}
.reset-button {
  padding: 10px 30px;
  border-radius: 40px;
}
.reset-button:hover {
  cursor: pointer;
  transform: translateY(2px);
}

/* ---------- PROJECTS ---------- */
.project-container {
  background-color: var(--main-background);
}
h1 {
  margin: 10px 0;
  font-family: 'Moderat Regular';
}
.grid-container {
  padding-top: 10vh;
  display: grid;
  grid-template-columns: 25% 25%;
  justify-content: center;
  grid-gap: 0 5vw;
  height: 90vh;
}
.grid-element {
  font-size: 16px;
  height: 310px;
  width: 270px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 25px;
  margin-top: -80px;
  padding-right: 25px;
}
.grid-element p {
  margin: 5px 0;
}
.grid-element:hover {
  background-image: url(https://s3-us-west-1.amazonaws.com/cherri-portfolio/big_cherri.png);
  background-repeat: no-repeat;
  background-size: contain;
  cursor: pointer;
  text-align: center;
  font-size: 14px;
  z-index: 999;
  height: 500px;
  margin-top: -260px;
  padding-top: 80px;
  padding-left: 45px;
}
.projects-footer {
  padding: 2vh 6vw 0 5vw;
  position: fixed;
  bottom: 5vh;
}
.projects-photo-preview {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 998;
}


/* ---------- PROJECT LIGHTBOX ------- */

.lightbox-container {
  background-color: black;
  width: 100vw;
  height: 100vh;
  display: flex;
}
.lightbox-footer {
  padding: 2vh 6vw;
  position: fixed;
  bottom: 6vh;
  color: #ffffff;
  display: flex;
  width: 89vw;
  justify-content: space-between;
}
.lightbox-footer div:hover {
  color: var(--main-red);
  font-weight: 800;
  cursor: pointer;
}
.lightbox-hero {
  padding: 12vh 2vw;
  max-width: 65vw;
}
.lightbox-text {
  color: #fff;
  padding: 4vh 4vw 4vh 2vw;
  width: 25vw;
  overflow: scroll;
  height: 80vh;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
  font-family: Apercu Light;
}
.lightbox-text::-webkit-scrollbar { 
  width: 0 !important 
}
.lightbox-text h1 {
  padding-top: 5vh;
  font-size: 3em;
  font-weight: 400;
  line-height: 1;
}
.lightbox-exit {
  position: fixed;
  right: 3vw;
  top: 2vh;
  padding-right: 10px;
}
.lightbox-exit img {
  width: 25px;
}
.lightbox-exit:hover {
  cursor: pointer;
}
.next-arrow-container {
  display: flex;
}
.arrow-white {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/arrow_white.png');
}
.arrow-black {
  background-image: url('https://s3-us-west-1.amazonaws.com/cherri-portfolio/arrow.png');  
}
/* ... */

